<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idTvNameGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:text="Nombre del grupo" />

        <ImageView
            android:id="@+id/idIvImgGroup"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/txt_group_image"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvPlaceYearFounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt_place_date_foundation"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTvPlaceYearFounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:text="txt_place_date_foundation" />

        <TextView
            android:id="@+id/tvMusicalGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt_musical_genre"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTvMusicalGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:text="txt_musical_genre" />

        <TextView
            android:id="@+id/tvGroupMembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt_group_members"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTvGroupMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:text="txt_group_members" />

        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt_history"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTvHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            tools:text="txt_history" />

    </LinearLayout>
</ScrollView>